Properties panel and the left tabs (palette/model/services) now have buttons that allow them to popup into dialogs Dialog.js: Minify no longer calls onclose (its hidden, not closed; if an event is needed it should be something other than onclose) DataModel.js: DataModel is no longer inspectable; no longer shows up in the inspector. EditArea.js: when adding text to an editor via setText() calls off/on if its visible so that we can rerender the line numbers/bottom of file mainNavigation: Removed the new UnsavedDialog and went to a simpler confirm dialog
git-svn-id: https://src.springsource.com/svn/wm_svn/eng3/trunk@31013 bab4cc61-abf4-0310-9601-8b162d8b0fb1

--- a/dev/studio/webapproot/pages/Studio/Studio.css
+++ b/dev/studio/webapproot/pages/Studio/Studio.css
@@ -1231,6 +1231,7 @@ table.studio_navigationMenu_PopupMenu img.dijitMenuItemIcon.service {
 	background-color: #6f798a;
 }
 
+
 .Studio-PITreeTopBorderl, .Studio-PITopBorderl {
 	background-image: url(images/pi_ul.gif);
 }
@@ -1238,7 +1239,7 @@ table.studio_navigationMenu_PopupMenu img.dijitMenuItemIcon.service {
 .Studio-PITreeTopBorderr, .Studio-PITopBorderr {
 	background-image: url(images/pi_ur.gif);
 }
-
+/*
 .Studio-PITreeBotBorderl, .Studio-PIBotBorderl {
 	background-image: url(images/pi_ll.gif);
 }
@@ -1246,7 +1247,7 @@ table.studio_navigationMenu_PopupMenu img.dijitMenuItemIcon.service {
 .Studio-PITreeBotBorderr, .Studio-PIBotBorderr {
 	background-image: url(images/pi_lr.gif);
 }
-
+*/
 .Studio-inspectorLayers .wmtree-root-leaf, .Studio-inspectorLayers .wmtree-root-last-leaf, .Studio-inspectorLayers .wmtree-last-item { 
 	background-color: #fff; 
 }
@@ -1844,4 +1845,19 @@ color: rgb(0,270,0);
 
 .Studio-userLabel .LicenseIcon {
     display: inline-block;
+}
+
+.Studio-paletteToDialogButton {
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    right: 1px;
+    top: 15px;
+}
+.Studio-paletteToDialogButton,
+.Studio-inspectorDialogToggle {
+    background-image: url(/wavemaker/images/dialogIconsGray.png);
+    background-position: -16px 0px;
+    background-repeat: no-repeat;
+    cursor: pointer;
 }
